move the subscribe box to avoid covering content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,7 +394,8 @@ footer {
 .subscribe-container{
   position: absolute;
   right: 30px;
-  bottom: 30px;
+  top: 50px;
+  padding-top: 5%;
 }
 
 .subscribe-container .box{
